--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                   <a href="https://www.instagram.com/samueljuan_/" class="home__social-icon" target="_blank">
                      <i class="uil uil-instagram-alt"></i>
                   </a>
-                  <a href="" class="home__social-icon" target="_blank">
-                     <i class="uil uil-dribbble"></i>
+                  <a href="https://www.linkedin.com/in/samuel-juan-5798781a6/" class="home__social-icon" target="_blank">
+                     <i class="uil uil-linkedin"></i>
                   </a>
-                  <a href="" class="home__social-icon" target="_blank">
+                  <a href="https://github.com/Samueljuan" class="home__social-icon" target="_blank">
                      <i class="uil uil-github-alt"></i>
                   </a>
                </div>
@@ -134,18 +134,20 @@
             <img src="assets/img/DSC_0370.JPG" alt="" class="about__img">
 
             <div class="about__data">
-               <p class="about__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore explicabo
-                  assumenda nostrum error esse porro ea alias quo facilis! Nihil iste ipsum praesentium vero suscipit
-                  accusantium ex voluptates, maiores cupiditate.</p>
+               <p class="about__description">Orang yang simple, mau mencoba hal-hal baru, dan mudah untuk
+                  beradaptasi. Memiliki semangat juang yang tinggi dan gigih dalam
+                  memecahkan suatu masalah merupakan salah satu kelebihan yang
+                  dimilikinya. Cita-citanya sebagai Web Developer terutama Frontend Developer dan mendirikan perusahaan
+                  konsultan IT</p>
                <div class="about__info">
                   <div>
                      <span class="about__info-title">1+</span>
-                     <span class="about__info-name">Years <br> experience</span>
+                     <span class="about__info-name">Tahun mendalami<br> Front-end</span>
                   </div>
 
                   <div>
                      <span class="about__info-title">10</span>
-                     <span class="about__info-name">Proyek<br> terselesaikan</span>
+                     <span class="about__info-name">Proyek web<br> terselesaikan</span>
                   </div>
 
                   <!-- <div>
@@ -358,6 +360,25 @@
          </div>
       </section>
 
+      <!--==================== PROJECT IN MIND ====================-->
+      <section class="project section">
+         <div class="project__bg">
+            <div class="project__container container grid">
+               <div class="project__data">
+                  <h2 class="project__title">You have new project?</h2>
+                  <p class="project__description"> Contact me now</p>
+                  <a href="#contact" class="button button--flex button--white">
+                     Contact Me
+                     <i class="uil uil-message project__icon button__icon"></i>
+                  </a>
+               </div>
+
+               <img src="assets/img/1602002650159_431719179-removebg-preview.png" alt="" class="project__img">
+            </div>
+         </div>
+
+      </section>
+
       <!--==================== QUALIFICATION ====================-->
       <section class="qualification section">
          <h2 class="section__title">Qualification</h2>
@@ -558,7 +579,7 @@
                </div>
             </div>
             <!--==================== SERVICES 3====================-->
-            <div class="services__content">
+            <!-- <div class="services__content">
                <div>
                   <i class="uil uil-pen services__icon"></i>
                   <h3 class="services__title">Branding <br>Designer</h3>
@@ -594,7 +615,7 @@
                      </ul>
                   </div>
                </div>
-            </div>
+            </div> -->
          </div>
       </section>
 
@@ -629,24 +650,10 @@
                   <div class="portfolio__data">
                      <h3 class="portfolio__title">Pegadaian Pancong</h3>
                      <p class="portfolio__description">Web sederhana untuk informasi singkat mengenai pegadaian
-                        "Pancong". Dibuat untuk memenuhi Ujian Akhir Semester(UAS) Rekayasa Perangkat Lunak 1 Semester 3</p>
-                     <a href="https://pegadaianpancong.netlify.app/"  target="_blank" class="button button--flex button--small portfolio__button">
-                        Demo
-                        <i class="uil uil-arrow-right button__icon"></i>
-                     </a>
-                  </div>
-               </div>
-
-               <!--==================== PORTFOLIO 3====================-->
-               <div class="portfolio__content grid swiper-slide">
-                  <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
-
-                  <div class="portfolio__data">
-                     <h3 class="portfolio__title">Modern website</h3>
-                     <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Assumenda optio maxime illum! Magnam voluptate necessitatibus quae eos ipsum magni obcaecati
-                        dolores nobis, sit culpa aliquam natus, debitis nulla deserunt suscipit.</p>
-                     <a href="" class="button button--flex button--small portfolio__button">
+                        "Pancong". Dibuat untuk memenuhi Ujian Akhir Semester(UAS) Rekayasa Perangkat Lunak 1 Semester 3
+                     </p>
+                     <a href="https://pegadaianpancong.netlify.app/" target="_blank"
+                        class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
                      </a>
@@ -664,119 +671,6 @@
 
             <!-- Add pagination -->
             <div class="swiper-pagination"></div>
-         </div>
-      </section>
-
-      <!--==================== PROJECT IN MIND ====================-->
-      <section class="project section">
-         <div class="project__bg">
-            <div class="project__container container grid">
-               <div class="project__data">
-                  <h2 class="project__title">You have new project?</h2>
-                  <p class="project__description"> Contact me now</p>
-                  <a href="#contact" class="button button--flex button--white">
-                     Contact Me
-                     <i class="uil uil-message project__icon button__icon"></i>
-                  </a>
-               </div>
-
-               <img src="assets/img/project.png" alt="" class="project__img">
-            </div>
-         </div>
-
-      </section>
-
-      <!--==================== TESTIMONIAL ====================-->
-      <section class="testimonial section">
-         <h2 class="section__title">Testimonial</h2>
-         <span class="section__subtitle">My client saying</span>
-
-         <div class="testimonial__container container swiper-container">
-            <div class="swiper-wrapper">
-               <!--==================== TESTIMONIAL 1====================-->
-               <div class="testimonial__content swiper-slide">
-                  <div class="testimonial__data">
-                     <div class="testimonial__header">
-                        <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
-
-                        <div>
-                           <h3 class="testimonial__name">Sara Smith</h3>
-                           <span class="testimonial__client">Client</span>
-                        </div>
-                     </div>
-
-                     <div>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                     </div>
-                  </div>
-
-                  <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                     voluptatibus cumque labore repudiandae eos corrupti corporis voluptates, iste eum ipsam unde
-                     perferendis blanditiis quibusdam, debitis dolorum est? Accusantium, aut consequuntur.</p>
-
-               </div>
-
-               <!--==================== TESTIMONIAL 2====================-->
-               <div class="testimonial__content swiper-slide">
-                  <div class="testimonial__data">
-                     <div class="testimonial__header">
-                        <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
-
-                        <div>
-                           <h3 class="testimonial__name">Sara Smith</h3>
-                           <span class="testimonial__client">Client</span>
-                        </div>
-                     </div>
-
-                     <div>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                     </div>
-                  </div>
-
-                  <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                     voluptatibus cumque labore repudiandae eos corrupti corporis voluptates, iste eum ipsam unde
-                     perferendis blanditiis quibusdam, debitis dolorum est? Accusantium, aut consequuntur.</p>
-
-               </div>
-
-               <!--==================== TESTIMONIAL 3====================-->
-               <div class="testimonial__content swiper-slide">
-                  <div class="testimonial__data">
-                     <div class="testimonial__header">
-                        <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
-
-                        <div>
-                           <h3 class="testimonial__name">Sara Smith</h3>
-                           <span class="testimonial__client">Client</span>
-                        </div>
-                     </div>
-
-                     <div>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                        <i class="uil uil-star testimonial__icon-star"></i>
-                     </div>
-                  </div>
-
-                  <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                     voluptatibus cumque labore repudiandae eos corrupti corporis voluptates, iste eum ipsam unde
-                     perferendis blanditiis quibusdam, debitis dolorum est? Accusantium, aut consequuntur.</p>
-
-               </div>
-            </div>
-
-            <!-- Add Pagination -->
-            <div class="swiper-pagination swiper-pagination-testimonial"></div>
          </div>
       </section>
 
@@ -870,17 +764,17 @@
             </ul>
 
             <div class="footer__socials">
-               <a href="#" class="footer__social" target="_blank">
-                  <i class="uil uil-facebook-f"></i>
+               <a href="http://wa.me/6287823006645" class="footer__social" target="_blank">
+                  <i class="uil uil-whatsapp"></i>
                </a>
 
                <a href="#" class="footer__social" target="_blank">
                   <i class="uil uil-instagram"></i>
                </a>
 
-               <a href="#" class="footer__social" target="_blank">
+               <!-- <a href="#" class="footer__social" target="_blank">
                   <i class="uil uil-twitter-alt"></i>
-               </a>
+               </a> -->
             </div>
          </div>
 
